Updated font colors and fixed some spacing issues

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -11,7 +11,7 @@
     font-style: italic;
     position: relative;
     border-radius: 100%;
-    background: #f84342;
+    background: #9933ff;
     border: 1px solid #F7F7F7;
     width: 80px;
     height: 80px;
@@ -54,15 +54,44 @@ hr {
 h1 {
   font-family: 'Love Ya Like A Sister', cursive;
   font-weight: bold;
-  font-size: 48px;
+  font-size: 40px;
+  color: white;
 }
 
 h2 {
   font-family: 'Love Ya Like A Sister', cursive;
+  font-size: 30px;
+}
+
+.title {
+  text-align: center;
+}
+
+.speech-bubble {
+	position: relative;
+	background: #9933ff;
+	border-radius: .4em;
+  text-align: center;
+  padding: 15px;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 39px solid transparent;
+	border-top-color: #9933ff;
+	border-bottom: 0;
+	border-right: 0;
+	margin-left: -19.5px;
+	margin-bottom: -39px;
 }
 
 .next-quote {
-  color: #D93041;
+  color: #330066;
   font-family: 'Love Ya Like A Sister', cursive;
   font-size: 20px;
 }
@@ -98,5 +127,5 @@ h2 span {
 }
 
 ::selection {
-  background-color: #f84342;
+  background-color: #9933ff;
 }
